force-app/main/default/objects/vlocity_ps__GenericRecipient__c/fields/vlocity_ps__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recipient Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Generic Recipients</relationshipLabel>
    <relationshipName>GenericRecipients</relationshipName>
    <type>Lookup</type>
</CustomField>