force-app/main/default/objects/vlocity_ps__GenericRecipient__c/fields/vlocity_ps__DateSent__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DateSent__c</fullName>
    <description>Date the document was sent</description>
    <formula>vlocity_ps__EnvelopeId__r.vlocity_ps__SentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Sent</label>
    <type>DateTime</type>
</CustomField>