force-app/main/default/objects/vlocity_ps__GenericRecipient__c/fields/vlocity_ps__EnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EnvelopeId__c</fullName>
    <description>Generic Envelope</description>
    <label>Generic Envelope</label>
    <referenceTo>vlocity_ps__GenericEnvelope__c</referenceTo>
    <relationshipLabel>Generic Recipients</relationshipLabel>
    <relationshipName>GenericRecipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>