force-app/main/default/objects/vlocity_ps__GenericRecipient__c/fields/vlocity_ps__EnvelopeIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EnvelopeIdentifier__c</fullName>
    <description>Envelope Identifier</description>
    <formula>vlocity_ps__EnvelopeId__r.vlocity_ps__EnvelopeIdentifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Envelope Identifier</label>
    <type>Text</type>
</CustomField>