force-app/main/default/objects/vlocity_ps__GenericRecipient__c/fields/vlocity_ps__LocaleCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LocaleCode__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ps__VlocityLocaleCode</valueSetName>
    </valueSet>
</CustomField>